--- a/src/DirectShowFrameGrabber/SConscript
+++ b/src/DirectShowFrameGrabber/SConscript
@@ -24,7 +24,8 @@ import glob
 import os.path
 import sys
 
-# import variables from other scons files
+have_utvision = False
+
 Import( '*' )
 
 # a)
